# ruloc

./: .gitignore  .release-plz.toml  .tarpaulin.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml
.claude/: settings.json
.claude/commands/: pr.md
.github/scripts/coverage-comment/: package-lock.json  package.json
.github/workflows/: ci.yml  publish-crate.yml  release-plz.yml  release-pr.yml  release.yml
.samoyed/: pre-commit  pre-push
claude/prompts/: 01-first-draft.md
docs/: RELEASE.md
docs/reports/: 02-analyze-ci.md  03-analyze-ci-addressed.md  100-keyless-signing.md  120-analyze-ci-ep2.md  120-analyze-release-plz--update.md  130-analyze-ci-addressed.md  130-analyze-workflows.md  140-analyze-ci-addressed-ep2.md  150-analyze-release-plz.md  201-analyze-ci-ep2.md  301-analyze-ci-addressed-ep2.md
src/: main.rs
