[package]
name = "ruloc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ruloc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
ra_ap_syntax = "0.0.301"
log = "0.4.28"
env_logger = "0.11.8"
rayon = "1.11.0"
indicatif = "0.18.0"
