[package]
name = "ruloc"
version = "0.1.0"
authors = ["Behrang Saeedzadeh <hello@behrang.org>"]
edition = "2024"
rust-version = "1.90.0"
readme = "README.md"
homepage = "https://github.com/nutthead/samoyed"
repository = "https://github.com/nutthead/samoyed"
license = "MIT"
description = "A fast, single-purpose CLI tool to analyze Rust codebase metrics with test/production breakdowns"
keywords = ["loc", "lines-of-code", "tokei"]
exclude = [
    ".claude/",
    ".github/",
    ".gitignore",
    ".samoyed/",
    ".docs/",
    ".assets/",
    ".cargo/",
    ".markdownlint.json",
    ".tarpaulin.toml",
    ".release-plz.toml",
    "clippy.toml",
    "CLAUDE.md",
    "AGENTS.md",
    "flake.nix",
    "flake.lock",
    "tmp/",
]

[[bin]]
name = "ruloc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
ra_ap_syntax = "0.0.301"
log = "0.4.28"
env_logger = "0.11.8"
rayon = "1.11.0"
indicatif = "0.18.0"
tempfile = "3.14.0"
colored = "2.2.0"
